Cleanup language file, number of strings no longer used.

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -174,9 +174,7 @@ msgctxt "#31310"
 msgid "Display touch/mouse controls if Kodi running on a touch/mouse enabled system."
 msgstr ""
 
-msgctxt "#31311"
-msgid "Use Artwork Download script to download additional media images for All library media items."
-msgstr ""
+#empty string from id 31311
 
 msgctxt "#31312"
 msgid "Show current time on home screen."
@@ -214,9 +212,7 @@ msgctxt "#31320"
 msgid "Type of image(s) to use on Broadcast shelf (On Horizontal or Icon menu type only)."
 msgstr ""
 
-msgctxt "#31321"
-msgid "Type of Home menu to use on home menu screen."
-msgstr ""
+#empty string from id 31321
 
 msgctxt "#31322"
 msgid "Type of image(s) to use on Custom shelf (On Horizontal or Icon menu type only)."
@@ -497,9 +493,7 @@ msgctxt "#31590"
 msgid "Music Artist Slideshow"
 msgstr ""
 
-msgctxt "#31591"
-msgid "Artwork Downloader"
-msgstr ""
+#empty string from id 31591
 
 msgctxt "#31592"
 msgid "Text Auto Completion"
@@ -611,11 +605,7 @@ msgctxt "#31680"
 msgid "Default Artwork Downloader"
 msgstr ""
 
-msgctxt "#31681"
-msgid "Artwork Downloader"
-msgstr ""
-
-#empty strings from id 31682 to 31687
+#empty strings from id 31681 to 31687
 
 msgctxt "#31688"
 msgid "Go Back"
@@ -734,14 +724,16 @@ msgctxt "#31805"
 msgid "Media Entry Points"
 msgstr ""
 
-#empty string id 31806
+msgctxt "#31806"
+msgid "Home Menu"
+msgstr ""
 
 msgctxt "#31807"
 msgid "Support"
 msgstr ""
 
 msgctxt "#31808"
-msgid "Home Screen"
+msgid "Home Shelf"
 msgstr ""
 
 msgctxt "#31809"
