Add skin based TVTunes to skin

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -174,15 +174,7 @@ msgctxt "#31310"
 msgid "Display touch/mouse controls if Kodi running on a touch/mouse enabled system."
 msgstr ""
 
-#empty string from id 31311
-
-msgctxt "#31312"
-msgid "Show current time on home screen."
-msgstr ""
-
-msgctxt "#31313"
-msgid "Show current weather outlook on home screen."
-msgstr ""
+#empty strings id 31311-31313
 
 msgctxt "#31314"
 msgid "Location of custom image to use as a watermark on home screen (only on Horizontal home menu type)."
@@ -218,7 +210,11 @@ msgctxt "#31322"
 msgid "Type of image(s) to use on Custom shelf (On Horizontal or Icon menu type only)."
 msgstr ""
 
-#empty strings id 31323-31339.
+msgctxt "#31323"
+msgid "Play theme tune if available (theme file can be either MP3 or Flac format)"
+msgstr ""
+
+#empty strings id 31324-31339.
 
 msgctxt "#31340"
 msgid "Location of custom skin background image."
@@ -934,7 +930,11 @@ msgctxt "#31893"
 msgid "Download media artwork"
 msgstr ""
 
-#empty strings from id 31894 to 31899
+msgctxt "#31894"
+msgid "Play videos theme tune"
+msgstr ""
+
+#empty strings from id 31895 to 31899
 
 msgctxt "#31900"
 msgid "Home menu type"
