Update changelog in preparation for Kodi repo pull request.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-[B]1.5.9[/B]
+[B]1.5.10[/B]
 Krypton 'Tock' 'Tock' Release
 
 - PVR code cleanups and bug fixes.
@@ -10,6 +10,7 @@ Krypton 'Tock' 'Tock' Release
 - Greatly expanded the use of active/inactive focus indicators thruout the skin, should now be available on most fullscreen windows.
 - Using extended info script we now have an actor info screen.  Will show default movies for actor dialog if script is not installed.
 - Support of Special Features script to allow user to access video extras.
+- Added skin based support for Theme tunes while browsing video library.
 - Changes to allow expanded use of animated posters. now available in most video views and also on the home screen shelf.
 - Fix to user playlists support from homescreen.  Customisation screen showed as a option but user could not navigate to their playlists.
 - Musicvideo support improvements.  Should now look the same no matter how the user accesses the content (from music or video libraries).
@@ -17,6 +18,7 @@ Krypton 'Tock' 'Tock' Release
 - Number of fixes to improve mouse/touch support in the skin.
 - Greatly expanded use of illegal action sound to let user know there is no additional hidden screen elements available to navigate to.
   Available on most fullscreen windows.
+- Added screen settings dialog to home screen. Amoungst other changes, user no longer needs to go to skin settings menu to customise home screen.
 - Numerous minor bug fixes and code cleanups.
 
 [B]1.5.5[/B]
