Fixes to duration strings, home shelf and fake overlay posters and strings

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -760,6 +760,14 @@ msgctxt "#31815"
 msgid "Never show"
 msgstr ""
 
+msgctxt "#31816"
+msgid "Hours"
+msgstr ""
+
+msgctxt "#31817"
+msgid "Hour"
+msgstr ""
+
 #empty strings from id 31816 to 31849
 
 msgctxt "#31850"
