String changes for custom skin addon scripts

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -489,15 +489,13 @@ msgctxt "#31590"
 msgid "Music Artist Slideshow"
 msgstr ""
 
-#empty string from id 31591
+#empty string with id 31591
 
 msgctxt "#31592"
 msgid "Text Auto Completion"
 msgstr ""
 
-msgctxt "#31593"
-msgid "Song Lyrics"
-msgstr ""
+#empty string with id 31593
 
 msgctxt "#31594"
 msgid "Global Search"
@@ -507,13 +505,9 @@ msgctxt "#31595"
 msgid "Image Resource Selection"
 msgstr ""
 
-msgctxt "#31596"
-msgid "Nextup Notification"
-msgstr ""
+#empty string with id 31596
 
-msgctxt "#31597"
-msgid "Next Aired TVShows"
-msgstr ""
+#empty string with id 31597
 
 msgctxt "#31598"
 msgid "Extended Info"
