update changelog and version number

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,16 @@
+[B]1.6.0[/B]
+Leia Release
+
+- Changes require to make skin compatible with Kodi Leia.
+- Add Game support.
+- Add support for new global search script.
+- Add settings menu to home screens.
+- Number of fixes to music views.
+- Numerous fixes to PVR subsection.
+- Add plot to video wrap views.
+- Add addon description to list and wrap views in Addons browser.
+- Numerous minor bug fixes and code cleanups.
+
 [B]1.5.10[/B]
 Krypton 'Tock' 'Tock' Release
 
