--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -507,7 +507,9 @@ msgstr ""
 
 #empty string with id 31596
 
-#empty string with id 31597
+msgctxt "#31597"
+msgid "Next Aired TVShows"
+msgstr ""
 
 msgctxt "#31598"
 msgid "Extended Info"
@@ -762,7 +764,7 @@ msgctxt "#31817"
 msgid "Hour"
 msgstr ""
 
-#empty strings from id 31816 to 31849
+#empty strings from id 31818 to 31849
 
 msgctxt "#31850"
 msgid "Heading"
@@ -1165,4 +1167,8 @@ msgstr ""
 
 msgctxt "#31981"
 msgid "Restore the skin settings"
+msgstr ""
+
+msgctxt "#31982"
+msgid "Automatic Login on startup"
 msgstr ""
