Kick off development on next release

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+[B]1.6.1[/B]
+Leia 'Tock' Release
+
+- Numerous fixes to PVR subsection.
+- Numerous minor bug fixes and code cleanups.
+
 [B]1.6.0[/B]
 Leia Release
 
