Major changes to Classifications icon handling

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Leia 'Tock' Release
 
 - Numerous fixes to PVR subsection.
+- Views code cleanup.
 - Numerous minor bug fixes and code cleanups.
 
 [B]1.6.0[/B]
