Modernise screen heading code.

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -938,7 +938,11 @@ msgctxt "#31894"
 msgid "Play videos theme tune"
 msgstr ""
 
-#empty strings from id 31895 to 31899
+msgctxt "#31895"
+msgid "Remove unused views"
+msgstr ""
+
+#empty strings from id 31896 to 31899
 
 msgctxt "#31900"
 msgid "Home menu type"
@@ -1045,7 +1049,7 @@ msgid "Wrap"
 msgstr ""
 
 msgctxt "#31943"
-msgid "Icons"
+msgid "Icon"
 msgstr ""
 
 msgctxt "#31944"
