--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,9 @@
-[B]1.6.1[/B]
+[B]1.6.2[/B]
 Leia 'Tock' Release
 
 - Numerous fixes to PVR subsection.
 - Views code cleanup.
+- Add screen menu setting to remove unused views.
 - Numerous minor bug fixes and code cleanups.
 
 [B]1.6.0[/B]
