Initial commit to add embuary helper support
Remove skin helper script and replace with embuary helper script. Fixes issue with skin supported scripts not dealing correctly with disabled scripts. Changes to handling of MPAA icons, now much faster and should scale much better than old method. Extend fake addons menu from Icon home screen.

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -489,7 +489,9 @@ msgctxt "#31590"
 msgid "Music Artist Slideshow"
 msgstr ""
 
-#empty string with id 31591
+msgctxt "#31591"
+msgid "CU LRC Lyrics"
+msgstr ""
 
 msgctxt "#31592"
 msgid "Text Auto Completion"
