--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -797,7 +797,9 @@ msgctxt "#31858"
 msgid "Custom Video"
 msgstr ""
 
-#empty string with id 31859
+msgctxt "#31859"
+msgid "Shelf background"
+msgstr ""
 
 msgctxt "#31860"
 msgid "Choose Custom background"
