--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,12 @@ Leia 'Tock' Release
 - Numerous fixes to PVR subsection.
 - Views code cleanup.
 - Add screen menu setting to remove unused views.
+- Added new method for displaying MPAA certification images. Now much quicker as $VAR's no longer needed, thus will scale much better.
+- Remove skin helper script and replace with Embuary helper script instead.
+- Remove skin code to provide TV theme support and replace with now legal TVTune script.
+- Add home screen setting to change shelf background image.
+- Remove a number of skin settings as now redundant.
+- Cleanup of a number of inbuilt skin images.
 - Numerous minor bug fixes and code cleanups.
 
 [B]1.6.0[/B]
