Fix skin settings for TV Tunes script

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -280,7 +280,9 @@ msgctxt "#31361"
 msgid "Script downloads and allows the display of additional artist fanart images for the currently playing song."
 msgstr ""
 
-#empty string with id 31362
+msgctxt "#31362"
+msgid "Script to play theme tune for selected media item."
+msgstr ""
 
 msgctxt "#31363"
 msgid "Script adds a list of suggestions for current text entered in the on screen keyboard."
@@ -330,15 +332,7 @@ msgctxt "#31374"
 msgid "Click shortcut button to assign home screen shortcut."
 msgstr ""
 
-msgctxt "#31375"
-msgid "Backup all skin settings to a zip file."
-msgstr ""
-
-msgctxt "#31376"
-msgid "Restore skin settings from previously saved zip file."
-msgstr ""
-
-#empty strings from id 31377 to 31527
+#empty strings from id 31375 to 31527
 
 msgctxt "#31528"
 msgid "Currently"
@@ -503,7 +497,9 @@ msgctxt "#31595"
 msgid "Image Resource Selection"
 msgstr ""
 
-#empty string with id 31596
+msgctxt "#31596"
+msgid "TV Tunes"
+msgstr ""
 
 msgctxt "#31597"
 msgid "Next Aired TVShows"
@@ -817,9 +813,7 @@ msgctxt "#31863"
 msgid "Use Fanart as background"
 msgstr ""
 
-msgctxt "#31864"
-msgid "Use ExtraFanart as background"
-msgstr ""
+#empty string with id 31864
 
 msgctxt "#31865"
 msgid "Use Artistslideshow as background"
