--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Leia 'Tock' Release
 - Added new method for displaying MPAA certification images. Now much quicker as $VAR's no longer needed, thus will scale much better.
 - Remove skin helper script and replace with Embuary helper script instead.
 - Remove skin code to provide TV theme support and replace with now legal TVTune script.
+- Update Artistslideshow script support to use version 3.x of script.
 - Add home screen setting to change shelf background image.
 - Remove a number of skin settings as now redundant.
 - Cleanup of a number of inbuilt skin images.
