--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -591,7 +591,11 @@ msgctxt "#31680"
 msgid "Default Artwork Downloader"
 msgstr ""
 
-#empty strings from id 31681 to 31687
+msgctxt "#31681"
+msgid "Artwork Beef Downloader"
+msgstr ""
+
+#empty strings from id 31682 to 31687
 
 msgctxt "#31688"
 msgid "Go Back"
