Major reworking of shelf widgets
Greatly expanded number of widget types and now allow custom widgets. User can now select playlists or favourites to use as widgets.

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -487,7 +487,9 @@ msgctxt "#31592"
 msgid "Text Auto Completion"
 msgstr ""
 
-#empty string with id 31593
+msgctxt "#31593"
+msgid "Up Next"
+msgstr ""
 
 msgctxt "#31594"
 msgid "Global Search"
@@ -722,7 +724,7 @@ msgid "Support"
 msgstr ""
 
 msgctxt "#31808"
-msgid "Home Shelf"
+msgid "Widgets"
 msgstr ""
 
 msgctxt "#31809"
@@ -1036,7 +1038,7 @@ msgid "Shelf images"
 msgstr ""
 
 msgctxt "#31940"
-msgid "Shelf icon type"
+msgid "Image type"
 msgstr ""
 
 #Viewtype Names
@@ -1165,15 +1167,43 @@ msgctxt "#31970"
 msgid "Available Updates"
 msgstr ""
 
-#empty strings from id 31971 to 31979
-
-msgctxt "#31980"
-msgid "Backup the skin settings"
+msgctxt "#31971"
+msgid "In Progress Movies"
 msgstr ""
 
-msgctxt "#31981"
-msgid "Restore the skin settings"
+msgctxt "#31972"
+msgid "Random Movies"
 msgstr ""
+
+msgctxt "#31973"
+msgid "Movie Tags"
+msgstr ""
+
+msgctxt "#31974"
+msgid "Movie Sets"
+msgstr ""
+
+msgctxt "#31975"
+msgid "In Progress Episodes"
+msgstr ""
+
+msgctxt "#31976"
+msgid "Next Up Episodes"
+msgstr ""
+
+msgctxt "#31977"
+msgid "New TVShows"
+msgstr ""
+
+msgctxt "#31978"
+msgid "TVShow Tags"
+msgstr ""
+
+msgctxt "#31979"
+msgid "TVShow Sets"
+msgstr ""
+
+#empty strings 31980 to 31981
 
 msgctxt "#31982"
 msgid "Automatic Login on startup"
