Added a number of Strings for widgets

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -587,7 +587,10 @@ msgctxt "#31668"
 msgid "Suggested"
 msgstr ""
 
-#empty strings from id 31669 to 31679
+msgctxt "#31669"
+msgid "Favourite"
+msgstr ""
+#empty strings from id 31670 to 31679
 
 msgctxt "#31680"
 msgid "Default Artwork Downloader"
@@ -945,7 +948,11 @@ msgctxt "#31896"
 msgid "MPAA ratings icon locale"
 msgstr ""
 
-#empty strings from id 31897 to 31899
+msgctxt "#31897"
+msgid "Automatic Login on startup"
+msgstr ""
+
+#empty strings from id 31898 to 31899
 
 msgctxt "#31900"
 msgid "Home menu type"
@@ -1121,7 +1128,7 @@ msgctxt "#31959"
 msgid "PendingUpdates"
 msgstr ""
 
-#Shelficon headings
+#Widget headings
 
 msgctxt "#31960"
 msgid "Recommended Movies"
@@ -1175,9 +1182,7 @@ msgctxt "#31972"
 msgid "Random Movies"
 msgstr ""
 
-msgctxt "#31973"
-msgid "Movie Tags"
-msgstr ""
+#empty string 31973
 
 msgctxt "#31974"
 msgid "Movie Sets"
@@ -1196,15 +1201,17 @@ msgid "New TVShows"
 msgstr ""
 
 msgctxt "#31978"
-msgid "TVShow Tags"
+msgid "Random Albums"
 msgstr ""
 
 msgctxt "#31979"
-msgid "TVShow Sets"
+msgid "Top 30 Albums"
 msgstr ""
 
-#empty strings 31980 to 31981
+msgctxt "#31980"
+msgid "Random Songs"
+msgstr ""
 
-msgctxt "#31982"
-msgid "Automatic Login on startup"
+msgctxt "#31981"
+msgid "Top 30 Songs"
 msgstr ""
