Major rework of Lyric display
Added a simple Lyric display for non latin type languages. Also toggle display of Lyrics from Music OSD.

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -952,7 +952,11 @@ msgctxt "#31897"
 msgid "Automatic Login on startup"
 msgstr ""
 
-#empty strings from id 31898 to 31899
+msgctxt "#31898"
+msgid "Use simple lyric screen"
+msgstr ""
+
+#empty string id 31899
 
 msgctxt "#31900"
 msgid "Home menu type"
