--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -901,7 +901,7 @@ msgid "Use letterbar"
 msgstr ""
 
 msgctxt "#31885"
-msgid "Idle animation delay"
+msgid "Idle widget delay"
 msgstr ""
 
 msgctxt "#31886"
@@ -1218,4 +1218,8 @@ msgstr ""
 
 msgctxt "#31981"
 msgid "Top 30 Songs"
+msgstr ""
+
+msgctxt "#31982"
+msgid "Idle Widget"
 msgstr ""
