More widget changes
Add user selectable widgets to Video info screen

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -212,7 +212,15 @@ msgctxt "#31324"
 msgid "Location for MPAA ratings icons (default USA or current locale)"
 msgstr ""
 
-#empty strings from id 31325 to 31339
+msgctxt "#31325"
+msgid "Type of widget to use on Movie Video Info screen."
+msgstr ""
+
+msgctxt "#31326"
+msgid "Type of widget to use on TVShows Video Info screen."
+msgstr ""
+
+#empty strings from id 31327 to 31339
 
 msgctxt "#31340"
 msgid "Location of custom skin background image."
@@ -446,7 +454,10 @@ msgctxt "#31573"
 msgid "AppleTV"
 msgstr ""
 
-#empty string with id 31574
+msgctxt "#31574"
+msgid "Universal Windows Platform"
+msgstr ""
+
 #Fontset names
 
 msgctxt "#31575"
@@ -469,7 +480,11 @@ msgctxt "#31579"
 msgid "Regular"
 msgstr ""
 
-#empty strings from id 31580 to 31588
+#empty strings from id 31580 to 31587
+
+msgctxt "#31588"
+msgid "Info Screen"
+msgstr ""
 
 msgctxt "#31589"
 msgid "Install Auto complete addon"
