Remove unused help text

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -230,9 +230,7 @@ msgctxt "#31341"
 msgid "Use FanArt image if available as skin background image."
 msgstr ""
 
-msgctxt "#31342"
-msgid "Use 'Extra' FanArt image if available as skin background image."
-msgstr ""
+#empty string with id 31342
 
 msgctxt "#31343"
 msgid "Use Playing video or Music visualisation if available as skin background image."
