Fixes for various TVShows shelf widgets

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -1156,7 +1156,7 @@ msgid "Next Aired Episodes"
 msgstr ""
 
 msgctxt "#31962"
-msgid "Recommended Episodes"
+msgid "Recommended TVShows"
 msgstr ""
 
 msgctxt "#31963"
