--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -338,7 +338,11 @@ msgctxt "#31374"
 msgid "Click shortcut button to assign home screen shortcut."
 msgstr ""
 
-#empty strings from id 31375 to 31527
+#empty strings from id 31375 to 31526
+
+msgctxt "#31527"
+msgid "abc"
+msgstr ""
 
 msgctxt "#31528"
 msgid "Currently"
@@ -639,7 +643,13 @@ msgctxt "#31693"
 msgid "More..."
 msgstr ""
 
-#empty strings from id 31694 to 31695
+msgctxt "#31694"
+msgid "Select + X"
+msgstr ""
+
+msgctxt "#31695"
+msgid "Select + Start"
+msgstr ""
 
 msgctxt "#31696"
 msgid "Video Addons"
