Fixes for UpNext script screens

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -617,7 +617,18 @@ msgctxt "#31681"
 msgid "Artwork Beef Downloader"
 msgstr ""
 
-#empty strings from id 31682 to 31687
+msgctxt "#31682"
+msgid "Continue watching in"
+msgstr ""
+
+msgctxt "#31683"
+msgid "Up next in"
+msgstr ""
+
+msgctxt "#31684"
+msgid "Next episode in"
+msgstr ""
+#empty strings from id 31685 to 31687
 
 msgctxt "#31688"
 msgid "Go Back"
