Add image type landscape to TVShows shelf

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -607,7 +607,12 @@ msgstr ""
 msgctxt "#31669"
 msgid "Favourite"
 msgstr ""
-#empty strings from id 31670 to 31679
+
+msgctxt "#31670"
+msgid "Landscape"
+msgstr ""
+
+#empty strings from id 31671 to 31679
 
 msgctxt "#31680"
 msgid "Default Artwork Downloader"
