--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-[B]1.6.3[/B]
+[B]1.6.4[/B]
 Leia 'Tock' Release
 
 - Numerous fixes to PVR subsection.
@@ -8,10 +8,11 @@ Leia 'Tock' Release
 - Remove skin helper script and replace with Embuary helper script instead.
 - Remove skin code to provide TV theme support and replace with now legal TVTune script.
 - Update Artistslideshow script support to use version 3.x of script.
+- Greatly expand widget support, now allows for playlists and favourites (allows user to use Kodi VFS nodes as widgets).
 - Add home screen setting to change shelf background image.
 - Remove a number of skin settings as now redundant.
 - Cleanup of a number of inbuilt skin images.
-- Numerous minor bug fixes and code cleanups.
+- Numerous bug fixes and code cleanups.
 
 [B]1.6.0[/B]
 Leia Release
