Show Profile details on home screen.
Setting is available from Screen Menu on ProfilesSetting screen.

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -995,7 +995,9 @@ msgctxt "#31898"
 msgid "Use simple lyric screen"
 msgstr ""
 
-#empty string id 31899
+msgctxt "#31899"
+msgid "Profile name on Home screen"
+msgstr ""
 
 msgctxt "#31900"
 msgid "Home menu type"
