Remove Raspberry Pi as Kodi system type
Raspberry Pi is now handled by Kodi same as Linux system type.  Raspberry Pi string now redundant.

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -444,9 +444,7 @@ msgctxt "#31570"
 msgid "Mac OS X"
 msgstr ""
 
-msgctxt "#31571"
-msgid "Raspberry Pi"
-msgstr ""
+#empty string with id 31571
 
 msgctxt "#31572"
 msgid "Android"
