Allow  Sets in VideoInfo dialog

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -616,9 +616,7 @@ msgctxt "#31680"
 msgid "Default Artwork Downloader"
 msgstr ""
 
-msgctxt "#31681"
-msgid "Artwork Beef Downloader"
-msgstr ""
+#empty string id 31681
 
 msgctxt "#31682"
 msgid "Continue watching in"
@@ -631,7 +629,12 @@ msgstr ""
 msgctxt "#31684"
 msgid "Next episode in"
 msgstr ""
-#empty strings from id 31685 to 31687
+
+#empty strings from id 31685 to 31686
+
+msgctxt "#31687"
+msgid "Movies in the Set"
+msgstr ""
 
 msgctxt "#31688"
 msgid "Go Back"
