Update documentation for new release

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,16 @@
+[B]1.7.0[/B]
+Matrix Release
+
+- Changes require to make skin compatible with Kodi Matrix.
+- Add PVR Guide extended navigation dialog. Longpress 'Select' brings up navigation controls.
+- Add support EDL and Chapter marks to Video progress bars.
+- Add Versions button to Addons info screen.
+- Add Reminder button to PVR info screen.
+- Removed support for Artwork Beef script as most of it functionality now provided by Kodi.
+- Requires ongoing work but due to Kodi switch to Python3 addons, some skin functions may no longer work.
+  I hope to return missing functions as scripts are updated by their authors or replacement scripts become available.
+- Numerous minor bug fixes and code cleanups.
+
 [B]1.6.6[/B]
 Last Leia Bugfix Release
 
