Add missing Video Info screen entry to changelog

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@ Matrix Release
 - Add support EDL and Chapter marks to Video progress bars.
 - Add Versions button to Addons info screen.
 - Add Reminder button to PVR info screen.
+- Add Sets support to Video Info screen.
 - Removed support for Artwork Beef script as most of it functionality now provided by Kodi.
 - Requires ongoing work but due to Kodi switch to Python3 addons, some skin functions may no longer work.
   I hope to return missing functions as scripts are updated by their authors or replacement scripts become available.
