Cleanup and bug fix in Home menu customisation dialog

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -1010,7 +1010,11 @@ msgctxt "#31914"
 msgid "Quit action"
 msgstr ""
 
-#empty strings from id 31915 to 31919
+msgctxt "#31915"
+msgid "Show menu item"
+msgstr ""
+
+#empty strings from id 31916 to 31919
 
 msgctxt "#31920"
 msgid "Movie library entry point"
@@ -1056,7 +1060,9 @@ msgctxt "#31930"
 msgid "Upload Debug Log file"
 msgstr ""
 
-#empty string with id 31931
+msgctxt "#31931"
+msgid "Lowlist"
+msgstr ""
 
 msgctxt "#31932"
 msgid "Enable Skin debug logging"
