--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+[B]1.7.1-alpha[/B]
+Matrix Bugfix alpha Release
+
+- Next release will include new features, bug fixes for 1.7.0
+- Includes a number of minor bug fixes
+
 [B]1.7.0[/B]
 Matrix Release
 
