Changes required for new widget view

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -1254,7 +1254,9 @@ msgctxt "#31972"
 msgid "Random Movies"
 msgstr ""
 
-#empty string 31973
+msgctxt "#31973"
+msgid "Widget"
+msgstr ""
 
 msgctxt "#31974"
 msgid "Movie Sets"
