--- a/language/resource.language.en_au/strings.po
+++ b/language/resource.language.en_au/strings.po
@@ -1217,7 +1217,10 @@ msgctxt "#31972"
 msgid "Random Movies"
 msgstr ""
 
-# empty string 31973
+msgctxt "#31973"
+msgid "Widget"
+msgstr ""
+
 msgctxt "#31974"
 msgid "Movie Sets"
 msgstr ""
