--- a/language/resource.language.sv_SE/strings.po
+++ b/language/resource.language.sv_SE/strings.po
@@ -27,9 +27,7 @@ msgstr ""
 
 msgctxt "Addon Disclaimer"
 msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "Posta hjälp-/funktionsförfrågningar samt buggrapporter till"
-
-[CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "Posta hjälp-/funktionsförfrågningar samt buggrapporter till[CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
