Initial SeasonWidget video view commit

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -1081,7 +1081,7 @@ msgid "Upload Debug Log file"
 msgstr ""
 
 msgctxt "#31931"
-msgid "Lowlist"
+msgid "SeasonWidget"
 msgstr ""
 
 msgctxt "#31932"
