Sync of addon metadata translations

--- a/language/resource.language.el_GR/strings.po
+++ b/language/resource.language.el_GR/strings.po
@@ -26,8 +26,10 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr "Το AppTV είναι ένα κέλυφος για το Kodi, εμπνευσμένο από το AppleTV. Διαθέτει ένα ιδιαίτερα ελαφρύ, μινιμαλιστικό περιβάλλον εργασίας, ενώ παρέχει πρόσβαση σε ένα πλήθος προχωρημένων λειτουργιών του Kodi που δεν είναι διαθέσιμες στο πρωτότυπο περιβάλλον του AppleTV."
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "Για βοήθεια, αιτήματα και αναφορές προβλημάτων, μεταβείτε στο [CR]http://forum.kodi.tv/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "Για βοήθεια, αιτήματα και αναφορές προβλημάτων, μεταβείτε στο 
+http://forum.kodi.tv/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
