--- a/language/resource.language.es_ES/strings.po
+++ b/language/resource.language.es_ES/strings.po
@@ -26,8 +26,10 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr "AppTV es una skin para Kodi insipirada en AppleTV. Provee una interfaz minimalista muy ligera a la vez que otorga acceso a funcionalidades avanzadas de Kodi no disponibles en la interfaz original de AppleTV."
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "Postea bugs y preguntas en [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "Postea bugs y preguntas en 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
