--- a/language/resource.language.fr_FR/strings.po
+++ b/language/resource.language.fr_FR/strings.po
@@ -26,8 +26,10 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr "AppTV est un habillage pour Kodi inspiré de l'AppleTV. Il fournit une interface minimaliste légère tout en permettant l'accès à bon nombre des caractéristiques avancées de Kodi non disponibles dans l'interface AppleTV d'origine."
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "Publier les demandes d'aide, de fonction, de bogue sur [CR]http://forum.kodi.org/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "Publier les demandes d'aide, de fonction, de bogue sur 
+http://forum.kodi.org/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
