--- a/language/resource.language.it_IT/strings.po
+++ b/language/resource.language.it_IT/strings.po
@@ -25,8 +25,10 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr "AppTV è una skin ispirata a AppleTV per Kodi. Fornisce un'interfaccia molto leggera e minimalistica e permette di accedere ad alcune funzioni avanzate di Kodi non disponibili nell'interfaccia originale di AppleTV."
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "Chiedi aiuto, richiedi funzioni/segnala bug a [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "Chiedi aiuto, richiedi funzioni/segnala bug a 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
