--- a/language/resource.language.ko_KR/strings.po
+++ b/language/resource.language.ko_KR/strings.po
@@ -26,8 +26,10 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr "AppTV는 애플TV에서 영감을 받아 만든 Kodi용 스킨입니다. GUI를 최소화하여 가벼우면서도 애플TV 인터페이스에서는 사용할 수 없는 Kodi의 여러가지 고급 기능을 사용할 수 있습니다."
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "도움 요청, 기능 제안, 버그 보고[CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "도움 요청, 기능 제안, 버그 보고
+http://forum.Kodi.org/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
