--- a/language/resource.language.lt_LT/strings.po
+++ b/language/resource.language.lt_LT/strings.po
@@ -26,8 +26,10 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr "AppTV yra AppleTV įkvėpta teminė išvaizda, skirta Kodi. Ji suteikia labai lengvą, minimalistinę grafinę vartotojo sąsają, tuo pačiu suteikiant galimybę naudoti daugelį pažangių Kdi funkcijų, kurių nėra originalioje AppleTV sąsajoje."
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "Paprašykite pagalbos ar paskelbkite funkcijos/klaidos užklausą čia: [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "Paprašykite pagalbos ar paskelbkite funkcijos/klaidos užklausą čia: 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
