--- a/language/resource.language.ms_MY/strings.po
+++ b/language/resource.language.ms_MY/strings.po
@@ -26,8 +26,10 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr "AppTV adalah kulit yang diilham dari AppleTV untuk Kodi. Ia menyediakan gui minimalis yang sangat ringkas juga membolehkan capaian ke beberapa fitur lanjutan Kodi yang tidak tersedia dalam antaramuka AppleTV yang asal."
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "Poskan bantuan dan permintaan fitur/pepijat ke [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "Poskan bantuan dan permintaan fitur/pepijat ke 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
