--- a/language/resource.language.nl_NL/strings.po
+++ b/language/resource.language.nl_NL/strings.po
@@ -26,8 +26,10 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr "AppTV is een op AppleTV geïnspireerde skin voor Kodi. het voorziet in een zeer lichtgewichte minimalistische gui terwijl eveneens toegang is tot een aantal geavanceerde Kodi features die niet beschikbaar zijn in de orginele AppleTV interface."
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "Stuur help en functie/fout vragen naar [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "Stuur help en functie/fout vragen naar 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
