--- a/language/resource.language.pt_BR/strings.po
+++ b/language/resource.language.pt_BR/strings.po
@@ -26,8 +26,10 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr "AppTV é uma skin inspirada na AppleTV para Kodi. Fornece uma GUI bem leve e minimalista ao mesmo empo que permite acesso a inúmeras funções avançadas do Kodinão disponíveis na interface original da AppleTV."
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "Postar pedidos de ajuda/funcionalidades e bugs em [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "Postar pedidos de ajuda/funcionalidades e bugs em 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
