--- a/language/resource.language.tr_TR/strings.po
+++ b/language/resource.language.tr_TR/strings.po
@@ -26,8 +26,10 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr "AppTV, AppleTV'den esinlenilmiş bir Kodi dış görünümüdür. Oldukça hafif, minimalist bir kullanıcı arayüzü sunarken, orjinal AppleTV arayüzünde bulunmayan çeşitli Kodi özelliklerine de erişim sağlar."
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "Yardım, özellik isteklerini ve hataları şuraya yazın [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "Yardım, özellik isteklerini ve hataları şuraya yazın 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
