--- a/language/resource.language.zh_CN/strings.po
+++ b/language/resource.language.zh_CN/strings.po
@@ -26,8 +26,10 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr "AppTV是一款以AppleTV为灵感的Kodi皮肤。它提供了一个重量非常轻的极简图形用户界面，同时还允许访问许多原始苹果电视界面中没有的高级Kodi功能。"
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "请在论坛发布求助及功能需求/报告错误 [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "请在论坛发布求助及功能需求/报告错误 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
