--- a/language/resource.language.de_DE/strings.po
+++ b/language/resource.language.de_DE/strings.po
@@ -26,8 +26,10 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr "AppTV ist ein vom Apple TV inspiriertes Skin für Kodi. Es bietet eine sehr ressourcensparende, minimalistische Benutzeroberfläche und gleichzeitig Zugang zu den erweiterten Kodi-Funktionen, die nicht in der originalen Apple TV-Oberfläche vorhanden sind."
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "Poste Funktionswünsche, Fragen und Fehler in [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "Poste Funktionswünsche, Fragen und Fehler in 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
