--- a/language/resource.language.eu_ES/strings.po
+++ b/language/resource.language.eu_ES/strings.po
@@ -26,7 +26,8 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr ""
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
 msgstr ""
 
 msgctxt "#31026"
