--- a/language/resource.language.fa_AF/strings.po
+++ b/language/resource.language.fa_AF/strings.po
@@ -25,7 +25,8 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr ""
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
 msgstr ""
 
 # Start startup strings 31001 - 31025
