--- a/language/resource.language.fr_CA/strings.po
+++ b/language/resource.language.fr_CA/strings.po
@@ -26,8 +26,10 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr "AppTV est un habillage pour Kodi inspiré d'AppleTV. Il propose une IUG très légère et minimaliste tout en permettant l'accès à plusieurs fonctions avancées de Kodi qui ne sont pas proposées dans l'interface originale d'AppleTV."
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "Publier les demandes d'aide, de fonction, de bogue sur [CR]http://forum.kodi.org/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "Publier les demandes d'aide, de fonction, de bogue sur 
+http://forum.kodi.org/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
