--- a/language/resource.language.pl_PL/strings.po
+++ b/language/resource.language.pl_PL/strings.po
@@ -26,8 +26,10 @@ msgid "AppTV is a AppleTV inspired skin for Kodi. It provides a very light weigh
 msgstr "ApplTV jest skórą inspirowaną wyglądem interfejsu AppleTV. Dostarcza wyjątkowo lekki i minimalistyczny interfejs użytkownika umożliwiający dostęp do wielu zaawansowanych funkcji Kodi, niedostępnych w oryginalnym interfejsie AppleTV."
 
 msgctxt "Addon Disclaimer"
-msgid "Post help and feature/bug requests to [CR]http://forum.Kodi.org/forumdisplay.php?fid=76"
-msgstr "Prośby o pomoc, zgłoszenia błędów oraz prośby o nowej funkcje zamieść na forum[CR]http://forum.kodi.tv/forumdisplay.php?fid=76"
+msgid "Post help and feature/bug requests to 
+http://forum.Kodi.org/forumdisplay.php?fid=76"
+msgstr "Prośby o pomoc, zgłoszenia błędów oraz prośby o nowej funkcje zamieść na forum
+http://forum.kodi.tv/forumdisplay.php?fid=76"
 
 msgctxt "#31026"
 msgid "Movies"
