--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -696,7 +696,11 @@ msgctxt "#31697"
 msgid "Music Addons"
 msgstr ""
 
-#empty strings from id 31698 to 31699
+msgctxt "#31698"
+msgid "New Search"
+msgstr ""
+
+#empty string 31699
 #End Misc. strings
 #Begin PVR strings 31700 - 31750
 
