More skin Search dialog fixes.
Fix for minor issues and to change from using Global search script to skin supplied solution

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -526,9 +526,7 @@ msgctxt "#31593"
 msgid "Up Next"
 msgstr ""
 
-msgctxt "#31594"
-msgid "Global Search"
-msgstr ""
+#empty string id 31594
 
 msgctxt "#31595"
 msgid "Image Resource Selection"
