Further changes to settings screen

--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -576,9 +576,7 @@ msgctxt "#31657"
 msgid "Local subtitle available"
 msgstr ""
 
-msgctxt "#31658"
-msgid "Event Log"
-msgstr ""
+#empty string id 31658
 
 msgctxt "#31659"
 msgid "Playlist"
