--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+[B]1.7.6[/B]
+Matrix 'Tock' bugfix Release
+
+- Update skin requirements to use latest v0.0.4 version of resource.images.classificationicons.colour. New Portuguese icons. 
+- Fix focus issue in Home Customisation screen.
+- Update skin to use new Favourites window.
+
 [B]1.7.5[/B]
 Matrix 'Tock' Release
 
