--- a/language/resource.language.en_GB/strings.po
+++ b/language/resource.language.en_GB/strings.po
@@ -217,7 +217,7 @@ msgid "Play theme tune if available (theme file can be either MP3 or Flac format
 msgstr ""
 
 msgctxt "#31324"
-msgid "Location for MPAA ratings icons (default USA or current locale)"
+msgid "Locale of Certification ratings"
 msgstr ""
 
 msgctxt "#31325"
@@ -228,7 +228,11 @@ msgctxt "#31326"
 msgid "Type of widget to use on TVShows Video Info screen."
 msgstr ""
 
-#empty strings from id 31327 to 31339
+msgctxt "#31327"
+msgid "Type of Certification ratings to show (Icon, Text or None)"
+msgstr ""
+
+#empty strings from id 31328 to 31339
 
 msgctxt "#31340"
 msgid "Location of custom skin background image."
@@ -570,7 +574,9 @@ msgctxt "#31657"
 msgid "Local subtitle available"
 msgstr ""
 
-#empty string id 31658
+msgctxt "#31658"
+msgid "Text"
+msgstr ""
 
 msgctxt "#31659"
 msgid "Playlist"
@@ -987,7 +993,7 @@ msgid "Remove unused views"
 msgstr ""
 
 msgctxt "#31896"
-msgid "MPAA ratings icon locale"
+msgid "Certification locale"
 msgstr ""
 
 msgctxt "#31897"
@@ -1006,7 +1012,11 @@ msgctxt "#31900"
 msgid "Home menu type"
 msgstr ""
 
-#empty strings from id 31901 to 31913
+msgctxt "#31901"
+msgid "Certification type"
+msgstr ""
+
+#empty strings from id 31902 to 31913
 
 msgctxt "#31914"
 msgid "Quit action"
@@ -1184,17 +1194,13 @@ msgstr ""
 
 #Widget headings
 
-msgctxt "#31960"
-msgid "Recommended Movies"
-msgstr ""
+#empty string with id 31960
 
 msgctxt "#31961"
 msgid "Next Aired Episodes"
 msgstr ""
 
-msgctxt "#31962"
-msgid "Recommended TVShows"
-msgstr ""
+#empty string with id 31962
 
 msgctxt "#31963"
 msgid "Recommended Albums"
@@ -1248,9 +1254,7 @@ msgctxt "#31975"
 msgid "In Progress Episodes"
 msgstr ""
 
-msgctxt "#31976"
-msgid "Next Up Episodes"
-msgstr ""
+#empty string with id 31976
 
 msgctxt "#31977"
 msgid "New TVShows"
@@ -1274,4 +1278,8 @@ msgstr ""
 
 msgctxt "#31982"
 msgid "Idle Widget"
+msgstr ""
+
+msgctxt "#31983"
+msgid "Random TV Episodes"
 msgstr ""
